Testing the hive image build